syntax = "proto3";

package auth;

option go_package = "github.com/abdulyazidi/cloudtv/backend/pb/auth";

service AuthService {
  rpc  Signup (SignupRequest) returns (SignupResponse) {}
}

message SignupRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string confirm_password = 4;
}


message SignupResponse {
  string user_id = 1;
  string token = 2;
}

